[package]
name = "no_bundler"
version = "0.1.0"
authors = ["Chris Whealy <chris@whealy.com>"]
description = "Training exercise for Rust -> WASM without a bundler"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2.45"
rand = { version = "0.6.5", features = ["wasm-bindgen"] }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]